name:                hriemann
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/hriemann#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Monitoring.Riemann.Event
                       Network.Monitoring.Riemann.TCP
  other-modules:       Network.Monitoring.Riemann.Proto.Attribute
                       Network.Monitoring.Riemann.Proto.Event
                       Network.Monitoring.Riemann.Proto.Msg
                       Network.Monitoring.Riemann.Proto.Query
                       Network.Monitoring.Riemann.Proto.State
  build-depends:       base >= 4.7 && < 5
                     , protocol-buffers >= 2.4.0 && < 2.5
                     , protocol-buffers-descriptor >= 2.4.0 && < 2.5
                     , bytestring >= 0.10 && < 0.11
                     , network >= 2.6 && < 2.7
                     , text >= 1.2 && < 1.3
                     , containers >= 0.5 && < 0.6
                     , binary >= 0.8 && < 0.9
                     , time >= 1.6 && < 1.7
                     , hostname >= 1.0 && < 1.1
  default-language:    Haskell2010

executable hriemann-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hriemann
  default-language:    Haskell2010

test-suite hriemann-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hriemann
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hriemann
